src/objects/et4ae5__Automated_Send__c.object
<CustomObject>
    <fields>
        <fullName>et4ae5__Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__BackupWorkflow__c</fullName>
        <label>Backup Workflow Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__Bounce_Rate_del__c</fullName>
        <formula>IF( AND( NOT( ISNULL( et4ae5__NumberSent__c ) ), et4ae5__NumberSent__c != 0 ), et4ae5__Number_Bounced__c / et4ae5__NumberSent__c , null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bounce Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>et4ae5__Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Unit</label>
        <referenceTo>et4ae5__Business_Unit__c</referenceTo>
        <relationshipLabel>Triggered Sends</relationshipLabel>
        <relationshipName>Send_Automations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>et4ae5__Click_Through_Rate__c</fullName>
        <formula>IF( AND( NOT( ISNULL( et4ae5__Number_Delivered__c ) ), et4ae5__Number_Delivered__c != 0 ), et4ae5__NumberofUniqueClicks__c / et4ae5__Number_Delivered__c, null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Click Through Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>et4ae5__Contact_Lead_FIeld__c</fullName>
        <description>Field label selected for the recipient. Only used for display purposes.</description>
        <inlineHelpText>The Contact/Lead Field is used to identify the intended recipient of the email. This must be a Lookup field to the Contact or Lead Object for the respective object used in the Triggered Send Definition. If creating a Triggered Send on the Contact or Lead</inlineHelpText>
        <label>Contact/Lead FIeld</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ConversationId__c</fullName>
        <externalId>true</externalId>
        <label>Conversation Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Data_Extension_Id__c</fullName>
        <label>Data Extension Id</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Data_Extension_Name__c</fullName>
        <label>Data Extension Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__DateSent__c</fullName>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>et4ae5__Deliverability_Rate__c</fullName>
        <formula>IF( AND( NOT( ISNULL( et4ae5__NumberSent__c ) ), et4ae5__NumberSent__c != 0 ), et4ae5__Number_Delivered__c / et4ae5__NumberSent__c, null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deliverability Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>et4ae5__EmailAssetId__c</fullName>
        <label>Email Asset Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__EmailId__c</fullName>
        <label>Email Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__EmailName__c</fullName>
        <label>Email Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Filter__c</fullName>
        <inlineHelpText>Field Criteria can be used to further refine if a Triggered Send should be sent.  Criteria is evaluated when the selected Object Event occurs</inlineHelpText>
        <label>Field Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>et4ae5__FromEmail__c</fullName>
        <label>From Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>et4ae5__FromName__c</fullName>
        <label>From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Hours_Delayed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Hours Delayed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__Individual_Tracking_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Individual Tracking Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__MemberId__c</fullName>
        <label>MemberId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__NotificationRecipients__c</fullName>
        <label>NotificationRecipients</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>et4ae5__Notify_Owner_On_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Owner On Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Notify_Running_User_On_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Running User On Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberNotClicked__c</fullName>
        <formula>et4ae5__Number_Delivered__c - et4ae5__NumberofUniqueClicks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Not Clicked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberSent__c</fullName>
        <label>Number Sent</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberUnsubscribed__c</fullName>
        <label>Number Unsubscribed</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__Number_Bounced__c</fullName>
        <formula>et4ae5__NumberofHardBounces__c + et4ae5__NumberofSoftBounces__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Bounced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__Number_Delivered__c</fullName>
        <formula>et4ae5__NumberSent__c - et4ae5__Number_Bounced__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Delivered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__Number_Not_Opened__c</fullName>
        <formula>et4ae5__Number_Delivered__c - et4ae5__NumberofUniqueOpens__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Not Opened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberofExistingUndeliverables__c</fullName>
        <label>Number of Existing Undeliverables</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberofExistingUnsubscribes__c</fullName>
        <label>Number of Existing Unsubscribes</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberofHardBounces__c</fullName>
        <label>Number of Hard Bounces</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberofSoftBounces__c</fullName>
        <label>Number of Soft Bounces</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberofSubscribersForwardingEmail__c</fullName>
        <label>Number of Subscribers Forwarding</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberofTotalClicks__c</fullName>
        <label>Number of Total Clicks</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberofTotalOpens__c</fullName>
        <label>Number of Total Opens</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberofUniqueClicks__c</fullName>
        <label>Number of Unique Clicks</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberofUniqueOpens__c</fullName>
        <label>Number of Unique Opens</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__Object__c</fullName>
        <inlineHelpText>Object which the Triggered Send is based off of</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Open_Rate__c</fullName>
        <formula>IF( AND( NOT( ISNULL( et4ae5__Number_Delivered__c ) ), et4ae5__Number_Delivered__c != 0 ), et4ae5__NumberofUniqueOpens__c / et4ae5__Number_Delivered__c, null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>et4ae5__Person_Account_Lookup_Field__c</fullName>
        <inlineHelpText>Field value selected that looks up to person accounts.</inlineHelpText>
        <label>Person Accout Lookup Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Preheader__c</fullName>
        <inlineHelpText>The string of text used to appear in the email&apos;s preheader. Note: This text contains backslashes (\) before all single quotes (&apos;) to ensure a secure experience. However, these backslashes do not appear in the email sent.</inlineHelpText>
        <label>Preheader</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__RecipientsOptedIn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RecipientsOptedIn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__SendClassificationId__c</fullName>
        <label>Send Classification Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__SendClassificationName__c</fullName>
        <label>Send Classification Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__SenderProfileId__c</fullName>
        <label>Sender Profile Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__SubjectBlob__c</fullName>
        <label>SubjectBlob</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>et4ae5__Subject__c</fullName>
        <inlineHelpText>The string of text used to appear in the email&apos;s subject line. Note: This text contains backslashes (\) before all single quotes (&apos;) to ensure a secure experience. However, these backslashes do not appear in the email sent.</inlineHelpText>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Subscribed_For_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscribed For Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Subscriber_Field__c</fullName>
        <label>Subscriber Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__TrackingOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate that a Triggered Send will only capture tracking data from Marketing Cloud.</description>
        <label>Tracking Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Trigger_send_when__c</fullName>
        <description>Object event that will trigger the evaluation of the Triggered Send.  Options are for when a new record for respective object is created, existing record is updated, or both created and updated</description>
        <formula>IF( et4ae5__Action__c == &apos;Insert&apos;,  $Label.et4ae5__recIns , IF( et4ae5__Action__c == &apos;Update&apos;,  $Label.et4ae5__recUpdt , IF(et4ae5__Action__c == &apos;Either&apos;, $Label.et4ae5__recUps , IF(et4ae5__Action__c == &apos;EitherSubsequently&apos;, $Label.et4ae5__recUpdtSub,&apos;&apos;))))</formula>
        <inlineHelpText>Object event that will trigger the evaluation of the Triggered Send.  Options are for when a new record for respective object is created, existing record is updated, or both created and updated</inlineHelpText>
        <label>Trigger send when</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Unsubscribe_Rate__c</fullName>
        <formula>IF( AND( NOT( ISNULL( et4ae5__Number_Delivered__c ) ), et4ae5__Number_Delivered__c != 0 ), et4ae5__NumberUnsubscribed__c / et4ae5__Number_Delivered__c, null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unsubscribe Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>et4ae5__Use_All_Subscribers_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use All Subscribers List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__etTriggeredSendDefId__c</fullName>
        <label>TriggeredSendDefId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__hasDelayedSends__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate that a Triggered Send has outstanding sends that will be sent based on the delay selected.</description>
        <label>hasDelayedSends</label>
        <type>Checkbox</type>
    </fields>
    <label>Triggered Send</label>
    <listViews>
        <fullName>Tescik_Automated_Send</fullName>
        <filterScope>Queue</filterScope>
        <label>Tescik</label>
        <queue>Tescik</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>et4ae5__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Triggered Send Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Triggered Sends</pluralLabel>
    <recordTypes>
        <fullName>et4ae5__Active</fullName>
        <active>true</active>
        <label>Active</label>
    </recordTypes>
    <recordTypes>
        <fullName>et4ae5__Inactive</fullName>
        <active>true</active>
        <label>Inactive</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>et4ae5__HoursDelayedMax</fullName>
        <active>true</active>
        <errorConditionFormula>et4ae5__Hours_Delayed__c &gt; 720</errorConditionFormula>
        <errorMessage>Hours Delayed cannot exceed 720.</errorMessage>
    </validationRules>
</CustomObject>